--- a/src/main/resources/templates/band/band.html
+++ b/src/main/resources/templates/band/band.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet" href="../css/band.css">
+    <link rel="stylesheet" href="../css/band_mediaQuery.css">
 
 </head>
 <body>
@@ -23,36 +24,36 @@
         </div>
       
         <!-- 가입한 밴드 출력 영역 -->
-        <div class="container">
-            <div class="row join_myBand">
+        <div class="container join_band_wapper gx-0">
+            <div class="row join_Band gx-0">
                 <!-- 밴드 만들기 영역 -->
-                <div class="col-2 join_band_item create_band">
+                <div class="col-sm-4 join_band_item create_band">
                     <div class="create_buttonBox"></div>
                     <strong>만들기</strong>
                 </div>
 
                 <!-- 가입한 밴드 출력 영역 -->
-                <div class="col-2  join_band_item ">
-                    <img src="./img/band/content/강원도 탄광문화촌.jpg" class="img-fluid join_band_item_img" alt="...">
+                <div class="col-sm-4 join_band_item ">
+                    <img src="../img/band/content/강원도 탄광문화촌.jpg" class="img-fluid join_band_item_img" alt="...">
                     <div class="join_band_item_text">
                         <strong>밴드 제목</strong>
                         <span>멤버 </span>
                     </div> 
                 </div>
-                <div class="col-2 join_band_item ">
+                <div class="col-sm-4 join_band_item ">
 
                 </div>
-                <div class="col-2 join_band_item ">
+                <div class="col-sm-4 join_band_item ">
 
                 </div>
-                <div class="col-2 join_band_item ">
+                <div class="col-sm-4 join_band_item ">
 
                 </div>
 
-                <div class="col-2 join_band_item ">
+                <div class="col-sm-4 join_band_item ">
 
                 </div>
-                <div class="col-2 join_band_item ">
+                <div class="col-sm-4 join_band_item ">
 
                 </div>
 
@@ -61,70 +62,73 @@
             </div>
         </div>
 
+        <!-- 밴드 추천 영역 -->
+        <div class="band_recomand_wrapper">
+            <div class="container">
+                <div class="row py-3">
+                    <div class="col">
+                        <span class="f22 float-start">이런 밴드는 어때요</span>
+                        <span class="float-end">모두보기 > </span>
+                    </div>
+                </div>
+                <!-- 밴드 추천 리스트 -->
+                <div class="row band_recomandBox">
+    
+                    <div class="col-lg-6 col-md-12 band_recomand_item ">
+                        <div class="band_recomand_img">
+                            <img src="../img/band/content/핑크뮬리.bmp" alt="">
+                        </div>
+                        <div class="band_recomand_text">
+                            <h3>월간가드닝 네이버  공식밴드</h3>
+                            <span>정원잡지 '월간가드닝'을 사랑하는 분들을 위한 공간입니다.</span>
+                            <div class="band_more_view">
+                                <span>'테마명'</span> 밴드 더보기 >
+                            </div>
+                        </div>
+                    </div>
+    
+                    <div class="col-lg-6 col-md-12 band_recomand_item ">
+                        <div class="band_recomand_img">
+                            <img src="../img/band/content/핑크뮬리.bmp" alt="">
+                        </div>
+                        <div class="band_recomand_text">
+                            <h3>월간가드닝 네이버  공식밴드</h3>
+                            <span>정원잡지 '월간가드닝'을 사랑하는 분들을 위한 공간입니다.</span>
+                            <div class="band_more_view">
+                                <span>'테마명'</span> 밴드 더보기 >
+                            </div>
+                        </div>
+                    </div>
+    
+                    <div class="col-lg-6 col-md-12 band_recomand_item ">
+                        <div class="band_recomand_img">
+                            <img src="../img/band/content/핑크뮬리.bmp" alt="">
+                        </div>
+                        <div class="band_recomand_text">
+                            <h3>월간가드닝 네이버  공식밴드</h3>
+                            <span>정원잡지 '월간가드닝'을 사랑하는 분들을 위한 공간입니다.</span>
+                            <div class="band_more_view">
+                                <span>'테마명'</span> 밴드 더보기 >
+                            </div>
+                        </div>
+                    </div>
+    
+                    <div class="col-lg-6 col-md-12 band_recomand_item ">
+                        <div class="band_recomand_img">
+                            <img src="../img/band/content/핑크뮬리.bmp" alt="">
+                        </div>
+                        <div class="band_recomand_text">
+                            <h3>월간가드닝 네이버  공식밴드</h3>
+                            <span>정원잡지 '월간가드닝'을 사랑하는 분들을 위한 공간입니다.</span>
+                            <div class="band_more_view">
+                                <span>'테마명'</span> 밴드 더보기 >
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div> 
+        </div><!-- 밴드 추천 영역 끝-->
         
-        <div class="container">
-            <div class="row py-3">
-                <div class="col">
-                    <span class="f22 float-start">이런 밴드는 어때요</span>
-                    <span class="float-end">모두보기 > </span>
-                </div>
-            </div>
-            <!-- 밴드 추천 리스트 -->
-            <div class="row band_recomandBox">
-
-                <div class="col-6 band_recomand_item ">
-                    <div class="band_recomand_img">
-                        <img src="./img/band/content/핑크뮬리.bmp" alt="">
-                    </div>
-                    <div class="band_recomand_text">
-                        <h3>월간가드닝 네이버  공식밴드</h3>
-                        <span>정원잡지 '월간가드닝'을 사랑하는 분들을 위한 공간입니다.</span>
-                        <div class="band_more_view">
-                            <span>'테마명'</span> 밴드 더보기 >
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-6 band_recomand_item ">
-                    <div class="band_recomand_img">
-                        <img src="./img/band/content/핑크뮬리.bmp" alt="">
-                    </div>
-                    <div class="band_recomand_text">
-                        <h3>월간가드닝 네이버  공식밴드</h3>
-                        <span>정원잡지 '월간가드닝'을 사랑하는 분들을 위한 공간입니다.</span>
-                        <div class="band_more_view">
-                            <span>'테마명'</span> 밴드 더보기 >
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-6 band_recomand_item ">
-                    <div class="band_recomand_img">
-                        <img src="./images/band/content/핑크뮬리.bmp" alt="">
-                    </div>
-                    <div class="band_recomand_text">
-                        <h3>월간가드닝 네이버  공식밴드</h3>
-                        <span>정원잡지 '월간가드닝'을 사랑하는 분들을 위한 공간입니다.</span>
-                        <div class="band_more_view">
-                            <span>'테마명'</span> 밴드 더보기 >
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-6 band_recomand_item ">
-                    <div class="band_recomand_img">
-                        <img src="./images/band/content/핑크뮬리.bmp" alt="">
-                    </div>
-                    <div class="band_recomand_text">
-                        <h3>월간가드닝 네이버  공식밴드</h3>
-                        <span>정원잡지 '월간가드닝'을 사랑하는 분들을 위한 공간입니다.</span>
-                        <div class="band_more_view">
-                            <span>'테마명'</span> 밴드 더보기 >
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> <!-- 밴드 추천 영역 끝-->
         
         <!-- 오늘의 인기글 영역 -->
         <div class="band_today_best_write">
@@ -136,9 +140,12 @@
                     </div>
                 </div>
             </div>
+            <!-- 오늘의 인기글 영역 -->
             <div class="band_today_best_writeBox">
                 <div class="band_today_best_list container">
-                    <div class="band_today_best_item">
+
+                    <!-- 오늘의 인기글 item-->
+                    <div class="col-lg-6 col-md-12 band_today_best_item">
                         <div class="best_item_title">
                             <strong>마운틴TV 공식밴드</strong>
                         </div>
@@ -150,14 +157,14 @@
                         </div>
                         <div class="best_item_footer">
                             <div class="best_item_footer_img">
-                                <img src="./images/band/content/ico-emo-light-34-3.png" alt="#">
-                                <img src="./images/band/content/ico-emo-light-34-1.png" alt="#">
+                                <img src="../img/band/content/ico-emo-light-34-3.png" alt="#">
+                                <img src="../img/band/content/ico-emo-light-34-1.png" alt="#">
                             </div>
                             <span>댓글</span>
                         </div>
                     </div>
 
-                    <div class="band_today_best_item">
+                    <div class="col-lg-6 col-md-12 band_today_best_item">
                         <div class="best_item_title">
                             <strong>마운틴TV 공식밴드</strong>
                         </div>
@@ -169,14 +176,14 @@
                         </div>
                         <div class="best_item_footer">
                             <div class="best_item_footer_img">
-                                <img src="./images/band/content/ico-emo-light-34-3.png" alt="#">
-                                <img src="./images/band/content/ico-emo-light-34-1.png" alt="#">
+                                <img src="../img/band/content/ico-emo-light-34-3.png" alt="#">
+                                <img src="../img/band/content/ico-emo-light-34-1.png" alt="#">
                             </div>
                             <span>댓글</span>
                         </div>
                     </div>
 
-                    <div class="band_today_best_item">
+                    <div class=" col-lg-6 col-md-12 band_today_best_item">
                         <div class="best_item_title">
                             <strong>마운틴TV 공식밴드</strong>
                         </div>
@@ -188,14 +195,14 @@
                         </div>
                         <div class="best_item_footer">
                             <div class="best_item_footer_img">
-                                <img src="./images/band/content/ico-emo-light-34-3.png" alt="#">
-                                <img src="./images/band/content/ico-emo-light-34-1.png" alt="#">
+                                <img src="../img/band/content/ico-emo-light-34-3.png" alt="#">
+                                <img src="../img/band/content/ico-emo-light-34-1.png" alt="#">
                             </div>
                             <span>댓글</span>
                         </div>
                     </div>
 
-                    <div class="band_today_best_item">
+                    <div class=" col-lg-6 col-md-12 band_today_best_item">
                         <div class="best_item_title">
                             <strong>마운틴TV 공식밴드</strong>
                         </div>
@@ -207,8 +214,8 @@
                         </div>
                         <div class="best_item_footer">
                             <div class="best_item_footer_img">
-                                <img src="./images/band/content/ico-emo-light-34-3.png" alt="#">
-                                <img src="./images/band/content/ico-emo-light-34-1.png" alt="#">
+                                <img src="../img/band/content/ico-emo-light-34-3.png" alt="#">
+                                <img src="../img/band/content/ico-emo-light-34-1.png" alt="#">
                             </div>
                             <span>댓글</span>
                         </div>
