--- a/src/main/resources/templates/home/home.html
+++ b/src/main/resources/templates/home/home.html
@@ -1,10 +1,485 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Title</title>
+  <link rel="stylesheet" href="../css/bootstrap.css">
+  <link rel="stylesheet" href="../css/search.css">
+  <link rel="stylesheet" href="../css/index02.css">
+  <link rel="stylesheet" href="../css/common.css">
+  <script src="https://unpkg.com/feather-icons"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/smooth-scrollbar/8.8.1/smooth-scrollbar.js"></script>
 </head>
-<body>
+<body id="smooth-scrollbar">
+<!--nav-->
+<header>
+  <div class="navbar">
+    <div class="carrier-logo">
+      <a href="">
+        <img src="../img/logo2-white.svg" alt="" class="logo-img-white">
+        <img src="../img/logo2.svg" alt="" class="logo-img-black cs-dnone">
+      </a>
+    </div>
+    <ul class="links">
+      <li class="carrier-home"><a href="" class="text-change">홈</a></li>
+      <li class="carrier-feed"><a href="" class="text-change">피드</a></li>
+      <li class="carrier-information"><a href="" class="text-change">정보</a></li>
+      <li class="carrier-ai"><a href="" class="text-change">AI 추천</a></li>
+      <li class="carrier-band"><a href="" class="text-change">소모임</a></li>
+    </ul>
+    <ul class="sub-links">
+      <li><a class="icon-text" href="#"><i data-feather="map-pin">map-pin</i></a></li>
+      <li><a class="icon-text" href="#"><i data-feather="search">search</i></a></li>
+      <!--<li><a class="icon-text" href="#"><i data-feather="user">user</i></a></li>-->
+      <li><a class="icon-text" href="#"><i data-feather="log-in">login</i></a></li>
+    </ul>
+    <div class="toggle-btn">
+      <i class="fa-solid fa-bars"></i>
+    </div>
+  </div>
+  <div class="nav-dropdown-menu">
+    <ul>
+      <li class="carrier-home"><a href="">홈</a></li>
+      <li class="carrier-feed"><a href="">피드</a></li>
+      <li class="carrier-information"><a href="">정보</a></li>
+      <li class="carrier-ai"><a href="">AI 추천</a></li>
+      <li class="carrier-band"><a href="">소모임</a></li>
+      <li><a class="icon-dropdown-text" href="#"><i data-feather="map-pin">map-pin</i><span>지도 보기</span></a></li>
+      <li><a class="icon-dropdown-text" href="#"><i data-feather="search">search</i><span>검색 하기</span></a></li>
+      <li><a class="icon-dropdown-text" href="#"><i data-feather="log-in">login</i><span>로그인 하기</span></a></li>
+      <!--<li><a class="icon-dropdown-text" href="#"><i data-feather="user">user</i><span>마이페이지</>span></a></li>-->
+    </ul>
+  </div>
+</header>
 
+<!--main page text, bg-video-->
+<div class="index-main">
+  <div class="bg-video-section">
+    <video autoplay muted loop playsinline class="back-video" src="video/main04.mp4"></video>
+  </div>
+  <div class="main-text">
+    <h1>Welcome</h1>
+    <h2>Carrier</h2>
+  </div>
+  <div class="main-container">
+    <div class="inner">
+      <div class="bottom-menu">
+        <ul>
+          <li><span>피드 한눈에 보기</span></li>
+          <li><span>정보 한눈에 보기</span></li>
+          <li><span>AI 추천 한눈에 보기</span></li>
+          <li><span>소모임 한눈에 보기</span></li>
+        </ul>
+      </div>
+      <div class="bottom-mobile-menu">
+        <ul>
+          <li><span>피드 한눈에 보기</span></li>
+          <li><span>정보 한눈에 보기</span></li>
+          <li><span>AI 추천 한눈에 보기</span></li>
+          <li><span>소모임 한눈에 보기</span></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="up-btn">
+    <div>
+      <i data-feather="chevron-up"></i>
+    </div>
+  </div>
+</div>
+<div class="section-bubble-wrap"> <!--container-->
+  <div class="section-bubble-inner"> <!--bubble-->
+    <span style="--i:11"></span>
+    <span style="--i:24"></span>
+    <span style="--i:15"></span>
+    <span style="--i:18"></span>
+    <span style="--i:21"></span>
+    <span style="--i:20"></span>
+    <span style="--i:29"></span>
+    <span style="--i:13"></span>
+    <span style="--i:18"></span>
+    <span style="--i:26"></span>
+    <span style="--i:17"></span>
+  </div>
+</div>
+<section id="sc1">
+  <div class="section-wrap">
+    <div class="section-inner">
+
+      <div class="section-main-text">
+        <h1>Why Carrier?</h1>
+      </div>
+      <div class="text-sub">
+        <p>FEED</p>
+        <p>Lorem ipsum dolor.</p>
+        <p>Lorem ipsum dolor sit amet.</p>
+        <a href="">더보기</a>
+      </div>
+      <!--PC content-->
+      <div class="section-content-wrap">
+        <div class="section-content-container">
+          <input type="radio" name="slide-a" id="a1" checked>
+          <label for="a1" class="section-content-card">
+            <div class="section-content-row">
+              <div class="section-content-icon">1</div>
+              <div class="description">
+                <h2>section1</h2>
+                <p>동해물과</p>
+              </div>
+            </div>
+          </label>
+          <input type="radio" name="slide-a" id="a2">
+          <label for="a2" class="section-content-card">
+            <div class="section-content-row">
+              <div class="section-content-icon">2</div>
+              <div class="description">
+                <h2>section1</h2>
+                <p>동해물과</p>
+              </div>
+            </div>
+          </label>
+
+          <input type="radio" name="slide-a" id="a3">
+          <label for="a3" class="section-content-card">
+            <div class="section-content-row">
+              <div class="section-content-icon">3</div>
+              <div class="description">
+                <h2>section1</h2>
+                <p>동해물과</p>
+              </div>
+            </div>
+          </label>
+
+          <input type="radio" name="slide-a" id="a4">
+          <label for="a4" class="section-content-card">
+            <div class="section-content-row">
+              <div class="section-content-icon">4</div>
+              <div class="description">
+                <h2>section1</h2>
+                <p>동해물과</p>
+              </div>
+            </div>
+          </label>
+
+        </div>
+      </div>
+      <!--mobile Content-->
+      <div class="m-section-content-wrap">
+        <div class="section-content-container">
+          <input type="radio" name="slide-a" id="a1" checked>
+          <label for="a1" class="section-content-card">
+            <div class="section-content-row">
+              <div class="section-content-icon">1</div>
+              <div class="description">
+                <h2>section1</h2>
+                <p>동해물과</p>
+              </div>
+            </div>
+          </label>
+          <input type="radio" name="slide-a" id="a2">
+          <label for="a2" class="section-content-card">
+            <div class="section-content-row">
+              <div class="section-content-icon">2</div>
+              <div class="description">
+                <h2>section1</h2>
+                <p>동해물과</p>
+              </div>
+            </div>
+          </label>
+
+          <input type="radio" name="slide-a" id="a3">
+          <label for="a3" class="section-content-card">
+            <div class="section-content-row">
+              <div class="section-content-icon">3</div>
+              <div class="description">
+                <h2>section1</h2>
+                <p>동해물과</p>
+              </div>
+            </div>
+          </label>
+
+          <input type="radio" name="slide-a" id="a4">
+          <label for="a4" class="section-content-card">
+            <div class="section-content-row">
+              <div class="section-content-icon">4</div>
+              <div class="description">
+                <h2>section1</h2>
+                <p>동해물과</p>
+              </div>
+            </div>
+          </label>
+
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section id="sc2">
+  <div class="section-wrap">
+    <div class="section-inner">
+      <div class="section-main-text">
+        <h1>Why Carrier?</h1>
+      </div>
+      <div class="text-sub">
+        <p>FEED</p>
+        <p>Lorem ipsum dolor.</p>
+        <p>Lorem ipsum dolor sit amet.</p>
+        <a href="">더보기</a>
+      </div>
+      <div class="section-content-wrap">
+        <div class="section-content-container">
+          <input type="radio" name="slide-b" id="b1" checked>
+          <label for="b1" class="section-content-card">
+            <div class="section-content-row">
+              <div class="section-content-icon">1</div>
+              <div class="description">
+                <h2>section1</h2>
+                <p>동해물과</p>
+              </div>
+            </div>
+          </label>
+          <input type="radio" name="slide-b" id="b2">
+          <label for="b2" class="section-content-card">
+            <div class="section-content-row">
+              <div class="section-content-icon">2</div>
+              <div class="description">
+                <h2>section1</h2>
+                <p>동해물과</p>
+              </div>
+            </div>
+          </label>
+          <input type="radio" name="slide-b" id="b3">
+          <label for="b3" class="section-content-card">
+            <div class="section-content-row">
+              <div class="section-content-icon">3</div>
+              <div class="description">
+                <h2>section1</h2>
+                <p>동해물과</p>
+              </div>
+            </div>
+          </label>
+          <input type="radio" name="slide-b" id="b4">
+          <label for="b4" class="section-content-card">
+            <div class="section-content-row">
+              <div class="section-content-icon">4</div>
+              <div class="description">
+                <h2>section1</h2>
+                <p>동해물과</p>
+              </div>
+            </div>
+          </label>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section id="sc3">
+  <div class="section-wrap">
+    <div class="section-inner">
+      <div class="section-main-text">
+        <h1>Why Carrier?</h1>
+      </div>
+      <div class="text-sub">
+        <p>FEED</p>
+        <p>Lorem ipsum dolor.</p>
+        <p>Lorem ipsum dolor sit amet.</p>
+        <a href="">더보기</a>
+      </div>
+      <div class="section-content-wrap">
+        <div class="section-content-container">
+          <input type="radio" name="slide-c" id="c1" checked>
+          <label for="c1" class="section-content-card">
+            <div class="section-content-row">
+              <div class="section-content-icon">1</div>
+              <div class="description">
+                <h2>section1</h2>
+                <p>동해물과</p>
+              </div>
+            </div>
+          </label>
+          <input type="radio" name="slide-c" id="c2">
+          <label for="c2" class="section-content-card">
+            <div class="section-content-row">
+              <div class="section-content-icon">2</div>
+              <div class="description">
+                <h2>section1</h2>
+                <p>동해물과</p>
+              </div>
+            </div>
+          </label>
+
+          <input type="radio" name="slide-c" id="c3">
+          <label for="c3" class="section-content-card">
+            <div class="section-content-row">
+              <div class="section-content-icon">3</div>
+              <div class="description">
+                <h2>section1</h2>
+                <p>동해물과</p>
+              </div>
+            </div>
+          </label>
+
+          <input type="radio" name="slide-c" id="c4">
+          <label for="c4" class="section-content-card">
+            <div class="section-content-row">
+              <div class="section-content-icon">4</div>
+              <div class="description">
+                <h2>section1</h2>
+                <p>동해물과</p>
+              </div>
+            </div>
+          </label>
+
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section id="sc4">
+  <div class="section-wrap">
+    <div class="section-inner">
+      <div class="section-main-text">
+        <h1>Why Carrier?</h1>
+      </div>
+      <div class="text-sub">
+        <p>FEED</p>
+        <p>Lorem ipsum dolor.</p>
+        <p>Lorem ipsum dolor sit amet.</p>
+        <a href="">더보기</a>
+      </div>
+      <div class="section-content-wrap">
+        <div class="section-content-container">
+          <input type="radio" name="slide-d" id="d1" checked>
+          <label for="d1" class="section-content-card">
+            <div class="section-content-row">
+              <div class="section-content-icon">1</div>
+              <div class="description">
+                <h2>section1</h2>
+                <p>동해물과</p>
+              </div>
+            </div>
+          </label>
+          <input type="radio" name="slide-d" id="d2">
+          <label for="d2" class="section-content-card">
+            <div class="section-content-row">
+              <div class="section-content-icon">2</div>
+              <div class="description">
+                <h2>section1</h2>
+                <p>동해물과</p>
+              </div>
+            </div>
+          </label>
+          <input type="radio" name="slide-d" id="d3">
+          <label for="d3" class="section-content-card">
+            <div class="section-content-row">
+              <div class="section-content-icon">3</div>
+              <div class="description">
+                <h2>section1</h2>
+                <p>동해물과</p>
+              </div>
+            </div>
+          </label>
+          <input type="radio" name="slide-d" id="d4">
+          <label for="d4" class="section-content-card">
+            <div class="section-content-row">
+              <div class="section-content-icon">4</div>
+              <div class="description">
+                <h2>section1</h2>
+                <p>동해물과</p>
+              </div>
+            </div>
+          </label>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section id="search-section">
+  <div id="search" class="container py-sm-0 py-md-3 py-lg-5 px-0">
+    <!--<h1 class="mx-5 pt-5">Search</h1>-->
+    <div class="row search-box-parent p-sm-4 p-md-5">
+      <!-- 검색 (좌) -->
+      <div class="col-12 col-lg-7 mx-auto rounded-4 p-sm-1 p-md-2 pe-lg-1">
+        <!-- 검색 창 -->
+        <form action="#" class="d-flex align-items-center justify-content-end">
+          <input type="search" name="" id="" class="border-0 bg-blur shadow-sm">
+          <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" fill="currentColor"
+               class="bi bi-search position-absolute z-3 me-4" viewBox="0 0 16 16">
+            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+          </svg>
+        </form>
+        <!--최근 검색-->
+        <div class="col-12 mt-sm-3 mt-lg-5 p-4 rounded-4 search-history bg-blur shadow-sm">
+          <p class="pb-3 fw-bold">최근 검색</p>
+          <div class="text-muted px-3 mb-4">
+            <button type="button" class="btn btn-light rounded-pill px-3 p-2 mb-2">제주도</button>
+            <button type="button" class="btn btn-light rounded-pill px-3 p-2 mb-2">독도</button>
+            <button type="button" class="btn btn-light rounded-pill px-3 p-2 mb-2">여수</button>
+          </div>
+          <hr>
+          <span class="text-center d-block text-muted f13">전체 삭제</span>
+        </div>
+        <!--실시간 인기순위-->
+        <div class="col-12 mt-sm-3 mt-lg-5  p-4 rounded-4 search-history bg-blur shadow-sm">
+          <p class="fw-bold">실시간 인기 검색</p>
+          <div class="px-1 mb-3">
+            <ol>
+              <li class="p-1 py-2"><span>1.</span> 수원</li>
+              <li class="p-1 py-2"><span>2.</span> 방화수류정</li>
+              <li class="p-1 py-2"><span>3.</span> 호수</li>
+              <li class="p-1 py-2"><span>4.</span> 광교</li>
+            </ol>
+          </div>
+        </div>
+      </div>
+      <!-- (우) -->
+      <div class="col-12 col-lg-4 p-4 mt-sm-3 mt-5 mt-lg-0  search-img-parent mx-auto bg-white rounded-4 p-sm-3 p-md-4 shadow-sm">
+        <strong class="d-block mb-3">원하는 여행지를 찾지 못하셨나요?</strong>
+        <span class="badge rounded-pill text-bg-info text-white mb-1">AD</span>
+        <!--AD 이미지-->
+        <img src="../img/oedo.jpg" class="img-fluid rounded-4" alt="">
+        <div class="d-flex align-items-center search-img mb-4">
+          <i class="fa-solid fa-location-dot float-start me-2"></i>
+          <span class="float-start">외도 보타니아</span>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!--footer-->
+<footer>
+  <div class="waves">
+    <div class="wave" id="wave1"></div>
+    <div class="wave" id="wave2"></div>
+    <div class="wave" id="wave3"></div>
+    <div class="wave" id="wave4"></div>
+  </div>
+  <ul class="social-icon">
+    <li><a href=""><i data-feather="twitter"></i></a></li>
+    <li><a href=""><i data-feather="facebook"></i></a></li>
+    <li><a href=""><i data-feather="instagram"></i></a></li>
+    <li><a href=""><i data-feather="youtube"></i></a></li>
+  </ul>
+  <ul class="footer-menu">
+    <li><a href="">홈</a></li>
+    <li><a href="">피드</a></li>
+    <li><a href="">정보</a></li>
+    <li><a href="">AI 추천</a></li>
+    <li><a href="">소모임</a></li>
+  </ul>
+  <p>&COPY; green computer | 16th gajo</p>
+</footer>
+
+<script>
+
+</script>
+<script src="../js/index.js"></script>
 </body>
 </html>
